--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <nav>
                     <ul>
                         <li><a href="index.html">HOME</a></li>
-                        <li><a href="movies.html">MOVIES</a></li>
+                        <li><a href="Movies.html">MOVIES</a></li>
                         <li><a href="Shows.html">SHOWS</a></li>
                         <li><a href="games.html">GAMES</a></li>
                         <li><a href="contact.html">SHOP</a></li>
