--- a/Movies.html
+++ b/Movies.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Betflix Movies</title>
-        <link rel="stylesheet" href="/CSS_and_JS/my_style2.css">
-        <link rel="stylesheet" href="/CSS_and_JS/nav_bar.css">
+        <link rel="stylesheet" href="../CSS_and_JS/my_style2.css">
+        <link rel="stylesheet" href="../CSS_and_JS/nav_bar.css">
     </head>
 
     <body>
