--- a/About.html
+++ b/About.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <head>
     <title>Betflix Lore</title>
-    <link rel="stylesheet" href="/CSS_and_JS/my_style2.css">
-    <link rel="stylesheet" href="/CSS_and_JS/nav_bar.css">
+    <link rel="stylesheet" href="CSS_and_JS/my_style2.css">
+    <link rel="stylesheet" href="CSS_and_JS/nav_bar.css">
 </head>
 <body class="background">
 
