--- a/Videos/Player-40YearOldVirgin.html
+++ b/Videos/Player-40YearOldVirgin.html
@@ -5,10 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="/CSS_and_JS/nav_bar.css">
-  <link rel="stylesheet" href="/CSS_and_JS/my_style.css">
-  <link rel="stylesheet" href="/CSS_and_JS/styles.css">
-  <script src="/CSS_and_JS/script.js" defer></script>
+  <link rel="stylesheet" href="../CSS_and_JS/nav_bar.css">
+  <link rel="stylesheet" href="../CSS_and_JS/my_style.css">
+  <link rel="stylesheet" href="../CSS_and_JS/styles.css">
+  <script src="../CSS_and_JS/script.js" defer></script>
 </head>
 <body>
   <nav>
