--- a/Movies.html
+++ b/Movies.html
@@ -19,7 +19,7 @@
                  <img scr="images/logo.png" class="logo">
                  <nav>
                      <ul>
-                         <li><a href="Index.html">HOME</a></li>
+                         <li><a href="index.html">HOME</a></li>
                          <li><a href="Movies.html">MOVIES</a></li>
                          <li><a href="Shows.html">SHOWS</a></li>
                          <li><a href="Games.html">GAMES</a></li>
