--- a/Movies/40YearOldVirgin.html
+++ b/Movies/40YearOldVirgin.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>about movies</title>
-        <link rel="stylesheet" href="/CSS_and_JS/nav_bar.css">
-        <link rel="stylesheet" href="/CSS_and_JS/my_style.css">
+        <link rel="stylesheet" href="../CSS_and_JS/nav_bar.css">
+        <link rel="stylesheet" href="../CSS_and_JS/my_style.css">
          <style>
             p {
                 font-size:40px;
